--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,8 @@
-h1 {
-  color: red;
+/* Center sear input in navbar
+====================================*/
+.navbar-collapse {
+ justify-content: center;
+ input {
+  max-width: 20rem;
+ }
 }
