--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -26,3 +26,43 @@
 .btn-warning {
   background-color: yellow !important;
 }
+.img-thumbnail {
+  padding: 0;
+  border: 0;
+}
+
+.img {
+  background-image: url('https://res.cloudinary.com/gdiaz/image/upload/v1502845267/game-map_f5316h.jpg');
+  background-attachment: fixed;
+  width: 100%;
+  height: 10rem;
+}
+
+.col-4 {
+  padding: 0.1rem;
+}
+
+.img-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+a.img-content {
+  position: absolute;
+  align-self: center;
+  text-decoration: none;
+  color: #f3f3f3;
+  border-bottom: 1px solid transparent;
+  transition: all 0.75s ease-in-out;
+  -webkit-transition: all 0.05S ease-in-out;
+}
+
+a.img-content:hover {
+  color: #d0d0d0;
+  border-bottom: 1px solid #d0d0d0;
+  transition: all 0.75s ease-in-out;
+  -webkit-transition: all 0.75 ease-in-out;
+}
+
+
+
