--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,7 +32,7 @@
 }
 
 .img {
-  background-image: url('https://res.cloudinary.com/gdiaz/image/upload/v1502845267/game-map_f5316h.jpg');
+  background-image: url('../images/game-map.jpg');
   background-attachment: fixed;
   width: 100%;
   height: 10rem;
