fixed html markup

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -28,14 +28,14 @@
 }
 .img-thumbnail {
   padding: 0;
-  border: 0; 
+  border: 0;
   width: 100%;
-  height: 10rem; 
+  height: 10rem;
     z-index: -1;
 }
 
 .img {
-  background-image: url("../images/map6.jpg");
+  background-image: url("../../images/map6.jpg");
   background-size: 100% 100%;
   background-attachment: fixed;
   width: 100%;
