just to be able to merge

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -35,7 +35,7 @@
 }
 
 .img {
-  background-image: url("../images/map6.jpg");
+  background-image: url("../../images/map6.jpg");
   background-size: 100% 100%;
   background-attachment: fixed;
   width: 100%;
