add responsiveness to the app

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,10 +1,14 @@
-/* Center sear input in navbar
+/* Center search input in navbar
 ====================================*/
 .navbar-collapse {
- justify-content: center;
- input {
-  max-width: 20rem;
- }
+  justify-content: center;
+  input {
+    max-width: 20rem;
+  }
+}
+
+.bg-dark {
+  background-color: #111 !important;
 }
 
 .footer {
@@ -31,7 +35,7 @@
   border: 0;
   width: 100%;
   height: 10rem;
-    z-index: -1;
+  z-index: -1;
 }
 
 .img {
@@ -43,13 +47,16 @@
 }
 
 .col-4 {
-  padding: 0.1rem; }
+  padding: 0.1rem;
+}
 
 .img-wrapper {
   display: flex;
   justify-content: center;
 }
 
+/* Map links and transition on hover
+===========================================*/
 a.img-content {
   position: absolute;
   align-self: center;
@@ -57,11 +64,24 @@ a.img-content {
   color: #f3f3f3;
   border-bottom: 1px solid transparent;
   transition: all 0.75s ease-in-out;
-  -webkit-transition: all 0.05S ease-in-out; }
+  -webkit-transition: all 0.05S ease-in-out;
+}
 
 a.img-content:hover {
   color: #d0d0d0;
   border-bottom: 1px solid #d0d0d0;
   transition: all 0.75s ease-in-out;
-  -webkit-transition: all 0.75 ease-in-out; }
+  -webkit-transition: all 0.75 ease-in-out;
+}
 
+/* Creates small padding between attraction list and map.
+============================================================*/
+.item {
+  padding-right: 1rem;
+}
+
+@media screen and (max-width: 980px) {
+  html {
+    font-size: 2.1rem;
+  }
+}
