--- a/templates/legend_list.hbs
+++ b/templates/legend_list.hbs
@@ -1,7 +1,7 @@
 
 {{#each this}}
   <div class="item" typeId={{type_id}} areaId={{area_id}}>
-     <a data-toggle="collapse" data-parent="#accordion-wrapper" href="#{{id}}" aria-expanded="true" aria-controls={{id}}>{{name}}</a>
+     <a data-toggle="collapse" data-parent="#accordion-wrapper" href="#{{id}}" aria-expanded="true" aria-controls={{id}} class="attractionNameLink">{{name}}</a>
      <div id={{id}} class="collapse" role="tabpanel">
         <p class="mb-3" style="color:white">{{description}}</p>
      </div>
