--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,12 +21,21 @@ body{
 .item{
     transition-duration: .7s;
     transition-timing-function: linear;
+    font-family: 'Slabo 27px', serif;
 }
 
 .item:hover {
     font-size: 1.1em;
 }
 
+#searchResults {
+    background-color: rgba(250,200,150,0.5);
+}
+
+#searchResults a{
+    color: red;
+    font-family: 'Slabo 27px', serif;
+}
 
 /*OTHER*/
 p{
@@ -37,9 +46,6 @@ p{
   background-color: yellow !important;
 }
 
-#searchResults a{
-    color: red;
-}
 
 /*********IMAGE SETTINGS**********/
 .img-thumbnail {
@@ -72,6 +78,11 @@ p{
 .img-wrapper {
   display: flex;
   justify-content: center;
+    transition: all 0.75s ease-in-out;
+}
+
+.img-wrapper:hover {
+    box-shadow: inset 0 0 10px #000000;
 }
 
 /* Map links and transition on hover
@@ -84,13 +95,15 @@ a.img-content {
   border-bottom: 1px solid transparent;
   transition: all 0.75s ease-in-out;
   -webkit-transition: all 0.05S ease-in-out;
+   font-family: 'Cinzel', serif;
 }
 
 a.img-content:hover {
-  color: #d0d0d0;
-  border-bottom: 1px solid #d0d0d0;
+  border-bottom: 3px solid maroon;
   transition: all 0.75s ease-in-out;
   -webkit-transition: all 0.75 ease-in-out;
+    color: darkgoldenrod;
+    font-size: 1.5em;
 }
 
 /* Creates small padding between attraction list and map.
@@ -122,12 +135,22 @@ a.img-content:hover {
   position: fixed;
   bottom: 0px;
     color: red;
+    margin: 0;
+    padding: 0;
 }
 
 .footer p span {
     width: 50%;
+    margin: 0;
+    padding: 0;
+}
+.footer p{
+    font-size: 1.5em;
+    font-family: 'Cinzel', serif;
+    margin: 0;
+    padding: 0;
 }
 
 #demo {
-  color: yellow;
+  color: red;
 }
