--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -114,6 +114,20 @@ a.img-content:hover {
   overflow-y: auto;
 }
 
+/*********MAP GRID**************/
+
+.map-grid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  height: 10rem;
+  width: 100%;
+  border: 2px solid green;
+  color: white;
+}
+
+
 /*********FOOTER**************/
 .footer {
   background: black;
