--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -138,8 +138,15 @@ a.img-content:hover {
   width: 100%;
   border: 2px solid green;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
+.map-row {
+  display: flex;
+  justify-content: space-around;
+}
 
 /*********FOOTER**************/
 .footer {
