working on adding area name to dropdown

--- a/templates/legend_list.hbs
+++ b/templates/legend_list.hbs
@@ -3,6 +3,7 @@
   <div class="item" typeId={{type_id}} areaId={{area_id}}>
      <a data-toggle="collapse" data-parent="#accordion-wrapper" href="#{{id}}" aria-expanded="true" aria-controls={{id}} class="attractionNameLink">{{name}}</a>
      <div id={{id}} class="collapse" role="tabpanel">
+       <p class="areaNameDropDown"></p>
         <p class="mb-3" style="color:white">{{description}}</p>
      </div>
   </div>
