--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -159,7 +159,7 @@ a.img-content:hover {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -10;
+  z-index: -1;
   height: 10rem;
   width: 100%;
   color: white;
@@ -175,10 +175,7 @@ a.img-content:hover {
 
 .pin {
   width: 100px;
-}
-
-.forward {
-  border: 1px solid green;
+  border: 0;
 }
 
 /*********FOOTER**************/
