finished search by type

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -28,6 +28,13 @@ body{
     font-size: 1.1em;
 }
 
+/** Attraction radio buttons
+=======================================*/
+.form-group {
+  color: #f3f3f3;
+  margin-left: 2rem;
+}
+
 #searchResults {
     background-color: rgba(250,200,150,0.5);
 }
