--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -62,7 +62,7 @@ body{
 }
 
 .navbar {
-  margin:0; 
+  margin:0;
   padding:0;
 }
 
@@ -243,8 +243,8 @@ a.img-content:hover {
 
 
   margin-bottom: 1em;
-  color:red;    
-  margin-left: 10%; 
+  color:red;
+  margin-left: 10%;
 
   opacity: .8;
   h4 {
@@ -254,7 +254,7 @@ a.img-content:hover {
     font-size:1.3em;
   }
 }
-fieldset {
+fieldset.itinerary-form {
 
     text-align: right;
     color:yellow;
