--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -293,6 +293,7 @@ fieldset.itinerary-form {
     #addbutton {
       margin-bottom: 1em;
       margin-right: 24%;
+      background-color: maroon;
     }
     input{
       margin-right: 5em;
